# data_narrative

./: .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json  repo.sh  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  release.yml
api/: index.html
authors/: index.html
contributing/: index.html
data_narrative/: __init__.py  cli.py  narratives.py
docs/: api.md  basic_exploration.ipynb  installation.md  usage.md
history/: index.html
installation/: index.html
search/: search_index.json
tests/: __init__.py  test_app.py  test_narratives.py
usage/: index.html
